# AutoWerewolf

./: .gitignore  README.md  pyproject.toml
autowerewolf/: __init__.py
autowerewolf/agents/: __init__.py  backend.py  batch.py  human.py  memory.py  moderator.py  output_corrector.py  player_base.py  prompts.py  schemas.py
autowerewolf/agents/roles/: __init__.py  guard.py  hunter.py  seer.py  village_idiot.py  villager.py  werewolf.py  witch.py
autowerewolf/cli/: __init__.py  main.py
autowerewolf/config/: __init__.py  game_rules.py  models.py  performance.py
autowerewolf/engine/: __init__.py  roles.py  rules.py  state.py
autowerewolf/io/: __init__.py  analysis.py  logging.py  persistence.py
autowerewolf/orchestrator/: __init__.py  game_orchestrator.py
autowerewolf/streamlit_web/: __init__.py  app.py  config_loader.py  i18n.py  session.py
autowerewolf/web/: __init__.py  config_loader.py  game_manager.py  i18n.py  schemas.py  server.py  session.py
autowerewolf/web/static/: app.js  index.html  style.css
autowerewolf/web/static/css/: main.css
autowerewolf/web/static/js/: game.js  i18n.js
autowerewolf/web/templates/: index.html
docs/: development_plan_en.md  system_design_en.md  werewolf_rules.md  werewolf_rules_en.md
tests/: __init__.py  test_agents.py  test_engine_rules.py  test_integration_badge.py  test_io.py  test_memory.py  test_model_backend.py  test_orchestrator.py  test_output_corrector.py  test_phase9.py  test_role_agents.py
